test/tests/compiler/18_structures/invalid_types/invalid_incomplete_structs/incomplete_local_var.plx
type struc s;

pub fn main(none) i32 {
    #  can't define a local variable (or any variable) with incomplete type
    v: struc s;
    return 0
}
